[gd_scene load_steps=21 format=3 uid="uid://c1yl13akmkdwr"]

[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_c88lx"]
[ext_resource type="AudioStream" uid="uid://dtt2wurho4swf" path="res://SFX/Character/Foots.wav" id="2_muhov"]
[ext_resource type="Script" path="res://Scripts/WeaponManager.gd" id="3_leshj"]
[ext_resource type="Script" path="res://Scripts/Interaction.gd" id="4_a5hc5"]
[ext_resource type="Script" path="res://Scripts/Debug.gd" id="9_3ll4r"]
[ext_resource type="AudioStream" uid="uid://yhwn040ncft3" path="res://SFX/Guns/Pickup.wav" id="9_qb5va"]
[ext_resource type="Script" path="res://Scripts/State_Machine.gd" id="10_decn2"]
[ext_resource type="AudioStream" uid="uid://dle08xyyo15rj" path="res://SFX/Character/JumpNoise.wav" id="10_p8a4h"]
[ext_resource type="AudioStream" uid="uid://ct4bxpm8s6qvc" path="res://SFX/Character/LandNoise.wav" id="11_oapcg"]
[ext_resource type="AudioStream" uid="uid://bbalm2e33r0bq" path="res://SFX/Character/Flashlight 1.wav" id="13_pjf0j"]

[sub_resource type="Animation" id="Animation_i810w"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Neck:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Neck:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.73586, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Neck:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_7pw4v"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Neck:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.015, -0.25, 0, 0.3, 0, 0, -0.25, 0, 0.25, 0, -0.015, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.015, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Neck:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1.75, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Neck:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sptwv"]
_data = {
"RESET": SubResource("Animation_i810w"),
"Walking": SubResource("Animation_7pw4v")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sd88y"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_020to"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xeapj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_d7xq3"]

[sub_resource type="GDScript" id="GDScript_wejnl"]
script/source = "class_name Idle_State

extends State

func update(delta):
	if player.velocity.length() > 0.0 and player.is_on_floor():
		transition.emit(\"WalkingState\")


"

[sub_resource type="GDScript" id="GDScript_rp7v7"]
script/source = "class_name Walking_State

extends State

func update(delta):
	if player.velocity.length() == 0.0:
		transition.emit(\"IdleState\")
"

[sub_resource type="GDScript" id="GDScript_psdki"]
script/source = "extends State
class_name Sprinting_State

func enter():
	player.speed = player.SPRINT_SPEED

func update(_delta):
	var input_dir = Input.get_vector(\"Left\", \"Right\", \"Forward\", \"Backward\")
	player.direction = (player.player_neck.transform.basis * Vector3(input_dir.x, 0, input_dir.y)).normalized()

	if player.direction.length() == 0.0:
		transition.emit(\"IdleState\")
	elif not Input.is_action_pressed(\"Sprint\"):
		transition.emit(\"WalkingState\")

	if Input.is_action_just_pressed(\"Jump\") and player.touching_floor:
		transition.emit(\"JumpingState\")

func physics_update(delta):
	player._handle_ground_movement()
	player._handle_headbob(delta)
"

[node name="Character" type="CharacterBody3D" node_paths=PackedStringArray("player_neck", "weapon_manager", "player_camera", "weapon_camera", "head_clearance_shape", "interact_ray", "state_machine", "animPlayer", "plyFlashlight", "run_sound") groups=["Player"]]
collision_mask = 16777213
script = ExtResource("1_c88lx")
player_neck = NodePath("Neck")
weapon_manager = NodePath("Neck/SubViewportContainer/WeaponViewport/WeaponCamera/Hand")
player_camera = NodePath("Neck/Camera3D")
weapon_camera = NodePath("Neck/SubViewportContainer/WeaponViewport/WeaponCamera")
head_clearance_shape = NodePath("HeadClearanceShape")
interact_ray = NodePath("Neck/Camera3D/InteractRay")
state_machine = NodePath("PlayerStateMachine")
animPlayer = NodePath("AnimationPlayer")
plyFlashlight = NodePath("Neck/SubViewportContainer/WeaponViewport/WeaponCamera/Hand/SpotLight3D")
run_sound = NodePath("Foots")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MeshInstance3D")
libraries = {
"": SubResource("AnimationLibrary_sptwv")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05218, 0)
material_override = SubResource("StandardMaterial3D_sd88y")
transparency = 1.0
cast_shadow = 0
mesh = SubResource("CapsuleMesh_020to")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05218, -0.0511754)
shape = SubResource("CapsuleShape3D_xeapj")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73586, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
cull_mask = 1048573

[node name="InteractRay" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(1.368, 0, 0, 0, 1.368, 0, 0, 0, 2, 0, 0, -0.7)
target_position = Vector3(0, 0, -1)
collision_mask = 2
hit_from_inside = true
debug_shape_custom_color = Color(0, 0, 0, 0)
script = ExtResource("4_a5hc5")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Neck"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponViewport" type="SubViewport" parent="Neck/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(1280, 720)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="Neck/SubViewportContainer/WeaponViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74365, 0)
cull_mask = 2
fov = 50.5

[node name="Hand" type="Node3D" parent="Neck/SubViewportContainer/WeaponViewport/WeaponCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.264088, -0.178788, 0.187654)
script = ExtResource("3_leshj")

[node name="SpotLight3D" type="SpotLight3D" parent="Neck/SubViewportContainer/WeaponViewport/WeaponCamera/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.342002, 0.273149, -0.0241479)
visible = false
light_energy = 6.0
light_indirect_energy = 3.0
light_volumetric_fog_energy = 3.0
shadow_enabled = true
spot_range = 15.0
spot_angle = 25.0

[node name="Foots" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0234202, -0.999726, 0, 0.999726, 0.0234202, 0, 0.315522, -0.0511754)
stream = ExtResource("2_muhov")
emission_angle_enabled = true
emission_angle_degrees = 74.0

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_qb5va")

[node name="JumpNoise" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.816116, 0)
stream = ExtResource("10_p8a4h")
volume_db = 80.0
emission_angle_degrees = 39.1
emission_angle_filter_attenuation_db = -3.0

[node name="LandNoise" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, -1, 0, 1, -2.98023e-08, -0.725013, 0.259464, -0.0932388)
stream = ExtResource("11_oapcg")
volume_db = -0.685
emission_angle_enabled = true
emission_angle_degrees = 40.0

[node name="flashLight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_pjf0j")

[node name="HeadClearanceShape" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
shape = SubResource("SphereShape3D_d7xq3")
target_position = Vector3(0, 0, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Debug" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
script = ExtResource("9_3ll4r")

[node name="MarginContainer" type="MarginContainer" parent="UI/Debug"]
layout_mode = 2

[node name="DebugInfoText" type="VBoxContainer" parent="UI/Debug/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE", "player")]
script = ExtResource("10_decn2")
CURRENT_STATE = NodePath("IdleState")
player = NodePath("..")

[node name="IdleState" type="Node" parent="PlayerStateMachine"]
script = SubResource("GDScript_wejnl")

[node name="WalkingState" type="Node" parent="PlayerStateMachine"]
script = SubResource("GDScript_rp7v7")

[node name="SprintingState" type="Node" parent="PlayerStateMachine"]
script = SubResource("GDScript_psdki")

[node name="JumpingState" type="Node" parent="PlayerStateMachine"]
